--- a/src/iframe/style.scss
+++ b/src/iframe/style.scss
@@ -4,11 +4,8 @@
  * CSS for both Frontend+Backend.
  */
 
-// .wp-block-cgb-block-iframe-embed-block  {
-//   background: $red;
-//   border: 0.2rem solid $black;
-//   color: $black;
-//   margin: 0 auto;
-//   max-width: 740px;
-//   padding: 2rem;
-// }
+
+iframe.wp-block-derweili-iframe-block{
+  width: 100%;
+  height: 600px;
+}
