--- a/src/pdf/style.scss
+++ b/src/pdf/style.scss
@@ -5,7 +5,10 @@
  */
 
 
-iframe.wp-block-derweili-iframe-block{
+.derweili-pdf-block{
   width: 100%;
-  height: 600px;
+  iframe{
+    width: 100%;
+    height: 600px;
+  }
 }
