--- a/src/pdf/style.scss
+++ b/src/pdf/style.scss
@@ -11,4 +11,15 @@
     width: 100%;
     height: 600px;
   }
+  
+}
+.derweili-pdf-block--iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 100%;
+  iframe{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
 }
